--- a/pom.xml
+++ b/pom.xml
@@ -5,42 +5,60 @@
   	<artifactId>restServices</artifactId>
   	<version>1.0</version>
 
-<properties><java.awt.headless>true</java.awt.headless></properties>
+	<pluginRepositories>
+	    <pluginRepository>
+	        <id>smartbear-sweden-plugin-repository</id>
+	        <url>http://www.soapui.org/repository/maven2/</url>
+	    </pluginRepository>
+	</pluginRepositories>
 
-<pluginRepositories>
-    <pluginRepository>
-        <id>smartbear-sweden-plugin-repository</id>
-        <url>http://www.soapui.org/repository/maven2/</url>
-    </pluginRepository>
-</pluginRepositories>
-
-<build>
-<plugins>
-    <plugin>
-        <groupId>com.smartbear.soapui</groupId>
-        <artifactId>soapui-maven-plugin</artifactId>
-        <version>4.6.4</version>
-        <configuration>
-            <projectFile>Grindr-Services-soapui-project.xml</projectFile>
-			<soapuiProperties>
-                <property>
-                    <name>soapui.log4j.config</name>
-                    <value>${basedir}/soapui-log4j.xml</value>
-                </property>
-            </soapuiProperties>
-            <outputFolder>${basedir}/logs</outputFolder>
-            <junitReport>true</junitReport>
-            <exportAll>true</exportAll>
-        </configuration>
-        <executions>
-            <execution>
-                <phase>test</phase>
-                <goals>
-                    <goal>test</goal>
-                </goals>
-            </execution>
-        </executions>
-    </plugin>
-</plugins>
-</build>
+	<build>
+		<plugins>
+			<plugin>
+			    <groupId>org.codehaus.mojo</groupId>
+			    <artifactId>properties-maven-plugin</artifactId>
+			    <version>1.0-alpha-2</version>
+			    <executions>
+			        <execution>
+			            <goals>
+			                <goal>set-system-properties</goal>
+			            </goals>
+			            <configuration>
+			                <properties>
+			                    <property>
+			                        <name>java.awt.headless</name>
+			                        <value>true</value>
+			                    </property>
+			                </properties>
+			            </configuration>
+			        </execution>
+			    </executions>
+			</plugin>
+		    <plugin>
+		        <groupId>com.smartbear.soapui</groupId>
+		        <artifactId>soapui-maven-plugin</artifactId>
+		        <version>4.6.4</version>
+		        <configuration>
+		            <projectFile>Grindr-Services-soapui-project.xml</projectFile>
+					<soapuiProperties>
+		                <property>
+		                    <name>soapui.log4j.config</name>
+		                    <value>${basedir}/soapui-log4j.xml</value>
+		                </property>
+		            </soapuiProperties>
+		            <outputFolder>${basedir}/logs</outputFolder>
+		            <junitReport>true</junitReport>
+		            <exportAll>true</exportAll>
+		        </configuration>
+		        <executions>
+		            <execution>
+		                <phase>test</phase>
+		                <goals>
+		                    <goal>test</goal>
+		                </goals>
+		            </execution>
+		        </executions>
+		    </plugin>
+		</plugins>
+	</build>
 </project>
